--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "compression": "^1.8.0",
     "express": "^4.21.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "react-window": "^1.8.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
